--- a/Sample_MVVMClean_UT/Sample_MVVMClean_UT/Resources/Info.plist
+++ b/Sample_MVVMClean_UT/Sample_MVVMClean_UT/Resources/Info.plist
@@ -13,7 +13,13 @@
 	<string>$(API_KEY)</string>
 	<key>ImageBaseURL</key>
 	<string>$(IMAGE_BASE_URL)</string>
+	<key>API_BASE_URL</key>
+	<string>$(API_BASE_URL)</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
+	<key>IMAGE_BASE_URL</key>
+	<string>$(IMAGE_BASE_URL)</string>
+	<key>API_KEY</key>
+	<string>$(API_KEY)</string>
 </dict>
 </plist>
